[package]
edition = "2021"
name = "ironcast"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
tempdir = "0.3.7"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
version = "1"
features = ["time"]

[workspace]
members = ["images/base/modify-cargo-toml"]
exclude = ['images/base']
